--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,22 @@
 body {
   background-color: rgb(190,190,190);
 }
+#banner_left {
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  float: left;
+}
+#banner_right {
+  padding: 10px;
+  margin: 0;
+  display: inline-block;
+  float: right;
+}
 .banner {
   background-color: rgb(255,205,0);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  
+  height: 150px;
 }
 .banner img {
   width: 300px;
